Use java.nio.file.Files#writeString